--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -8,7 +8,7 @@
     </header>
 
     <main role="main" class="inner cover">
-      <h1 class="cover-heading">ChatMe.</h1>
+      <h1 class="cover-heading"><b>Scorpio</b></h1>
       <p class="lead secondary-headlight mt-4">Be close with your</p>
       <p class="lead">
         <a href="#" class="btn btn-lg btn-secondary mt-5 pl-5 pr-5" routerLink="/login">Sign in and start chatting!</a>
