--- a/src/app/modules/dashboard/chat-message/chat-message.component.html
+++ b/src/app/modules/dashboard/chat-message/chat-message.component.html
@@ -6,7 +6,9 @@
           <div class="col-2 incoming-message-avatar">
             <img src="/assets/img/user_avatar.svg" alt="">
           </div>
-          <img class="col-12" [src]="getImage(message.time)" *ngIf="message.type === 'image'">
+          <div class="col-12 incoming-message-content">
+            <img class="col-12" [src]="getImage(message.time)" *ngIf="message.type === 'image'">
+          </div>
           <div class="col-12 incoming-message-content" *ngIf="message.content !== null && message.content !== ''">
             <div class="incoming-message-text">
               <p class="shadow p-3 mb-5 rounded" style="overflow-wrap: break-word;">
