done essential feature

--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -40,7 +40,7 @@
       </ng-multiselect-dropdown>
     </div>
     <!-- <div class="col-12 mt-4"  *ngIf="showMembersGroup" >
-      <button type="button" class="btn btn-danger text-right" (click)="closeMembersGroup()">Delete</button>
+      <button type="button" class="btn btn-danger text-right" (click)="deleteGroupMembers()">Delete</button>
     </div> -->
     <div class="col-12 mt-4" *ngIf="showAddMembers">
       <button type="button" class="btn btn-primary text-right" (click)="addGroupMembers()">Add</button>
