--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -39,9 +39,9 @@
         (onDeSelectAll)="onUnSelectAll()">
       </ng-multiselect-dropdown>
     </div>
-    <!-- <div class="col-12 mt-4"  *ngIf="showMembersGroup" >
+    <div class="col-12 mt-4"  *ngIf="showMembersGroup" >
       <button type="button" class="btn btn-danger text-right" (click)="deleteGroupMembers()">Delete</button>
-    </div> -->
+    </div>
     <div class="col-12 mt-4" *ngIf="showAddMembers">
       <button type="button" class="btn btn-primary text-right" (click)="addGroupMembers()">Add</button>
     </div>
